--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %} {% block body %}
 <head>
-  <title>Vriddhi-home</title>
+  <title>Fronts-home</title>
   <link
     href="{{url_for('static', filename='css/for_home.css')}}"
     rel="stylesheet"
