--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta http-equiv="expires" content="Tue, 01 Jan 2025 12:00:00 GMT" />
     <meta
       name="description"
       content="a platform to share communicate your ideas. #Join live chat and share your opinions.
-    A new world of communication is now open. #JOIN VRIDDHI"
+    A new world of communication is now open. #JOIN FRONTS"
     />
     <meta name="author" content="" />
     <link rel="icon" href="static/img/vriddhi_logo.png" alt="vriddhi logo" />
-    <title>Vriddhi</title>
+    <title>Fronts</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -48,7 +48,7 @@
         ></label>
         <div class="content">
           <div class="logo">
-            <a>Vriddhi</a>
+            <a>Fronts</a>
             <img
               id="logo"
               src="{{url_for('static', filename='img/vriddhi_logo.png')}}"
@@ -60,10 +60,9 @@
           <ul class="links">
             <div class="user-info">
               <div class="user">{{current_user.username}}</div>
-              <div class="date">joined us on {{current_user.date}}</div>
+              <div class="date">joined on {{current_user.date}}</div>
               <div class="email">email:{{current_user.email}}</div>
             </div>
-            <hr />
 
             <div class="sub-links">
               <div class="small-links">
@@ -86,7 +85,7 @@
             <div class="footer-nav">
               <div class="copyright-nav">
                 @ 2023 The Individuals World ||
-                <a href="https://vriddhi.site/add_post">Vriddhi</a>
+                <a href="https://vriddhi.site/add_post">Fronts</a>
               </div>
               <div
                 class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end"
