--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <meta charset="UTF-8" />
+
   <meta
     name="viewport"
     content="width=device-width, initial-scale=1.0"
     description="#add a post , #create something,#free platform to freely share your ideas #chat on topics."
   />
   <link rel="icon" href="static/img/vriddhi_logo.png" alt="vriddhi logo" />
-  <title>Vriddhi-talk area</title>
+  <title>Fronts-talk area</title>
   <head>
-    <meta charset="utf-8" />
-    <title>Vriddhi-chat</title>
     <!-- Google fonts. -->
     <link
       href="https://fonts.googleapis.com/css?family=Bungee Outline"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css?family=Varela Round"
-      rel="stylesheet"
-    />
+
     <!-- Use font awesome icons. -->
 
     <!-- Use firebase app and database. -->
@@ -101,7 +97,7 @@
         height: 40px;
 
         color: #1d3354;
-        font-family: Varela Round;
+        font-family: Arial, Helvetica, sans-serif;
         font-size: 15px;
         font-weight: bold;
         text-align: center;
@@ -125,7 +121,7 @@
         width: 60%;
         height: 40px;
 
-        font-family: Varela Round;
+        font-family: Arial, Helvetica, sans-serif;
         font-size: 15px;
         font-weight: bold;
         text-align: center;
@@ -154,7 +150,7 @@
 
         float: left;
         overflow-y: auto;
-        font-family: Varela Round;
+        font-family: Arial, Helvetica, sans-serif;
 
         padding-left: 15px;
         padding-right: 15px;
@@ -169,7 +165,7 @@
 
         padding-left: 15px;
         padding-right: 15px;
-        font-family: Varela Round;
+        font-family: Arial, Helvetica, sans-serif;
         margin-top: 10px;
       }
       #chat_input {
