--- a/templates/edit.html
+++ b/templates/edit.html
@@ -2,142 +2,156 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"description="#add a post , #create something,#free platform to freely share">
-    <title>Add Post</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"description="#add a post ,
+     #create something, #free platform to freely share your knowledge">
+    <title>Fronts-Edit Post</title>
     <link href='https://fonts.googleapis.com/css?family=Bungee Outline' rel='stylesheet'/>
     <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
   />
-    <style>
-        *{
-           outline: none;
-           border: none;
-           padding: 0;
-           margin: 0;
-           box-sizing: border-box;
-        }
-        body {
-            font-family: Arial, sans-serif;
-            background:linear-gradient(120deg,#353535 91.2%,#d7d7d7 8.7%);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            min-height: 100px;
-            max-height: min-content;
-            
-        }
-        h1{
-            font-family: Bungee Outline;
-        }
-        .heading{
-            display: flex;
-            background-color: #ED243B;
-            justify-content: center;
-            align-items: center;
-            font-size: clamp(18px,3vw,45px);
-            height: clamp(80px,15vw,200px);
-            width: 100%;
-        }
+  <style>
+    *{
+       outline: none;
+       border: none;
+       padding: 0;
+       margin: 0;
+       
+       box-sizing: border-box;
+    }
+    html{
+        height: 100%;
+    }
+    body {
+        font-family: Arial, sans-serif;
+        background:linear-gradient(120deg,#010028 91.2%,#d7d7d7 8.7%);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        
 
         
-        .add-post-container {
-            width: 97%;
-            max-width: 600px;
-            zoom: 90%;
-            padding: 20px;
-            border: 1px solid #f6efef;
-            border-radius: 8px;
-            border: 5px solid black;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            background-color: #fff;
-            text-align: center;
-        }
-        .contact-image i{
-            font-size: clamp(20px,8vw,50px);
-        }
-        #title,#category{
-            border: none;
-            background-color:transparent;
-             text-decoration: underline;
-        }
-        .head-cont{
-         
-            height: 130px;
-            margin-bottom: 10px;
-            border-radius: 3px;
-        }
+    }
+    h1{
+        font-family: Bungee Outline;
+    }
+    .heading{
+        display: flex;
+        background-color: #ED243B;
+        justify-content: center;
+        align-items: center;
+        font-size: clamp(18px,3vw,45px);
+        height: clamp(80px,15vw,200px);
+      
+        width: 100%;
+    }
 
-        .add-post-header {
-            font-size: clamp(24px,2vw,30px);
-            margin-bottom: 20px;
-            color: #ED4024;
-        }
+    
+    .add-post-container {
+        width: 97%;
+        max-width: 600px;
+        zoom: 90%;
+        padding: 20px;
+        
+        border-radius: 8px;
+        border: 5px solid black;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        background-color: transparent;
+        text-align: center;
+    }
+    .contact-image i{
+        font-size: clamp(20px,8vw,50px);
+    }
+    #title,#category{
+        border: none;
+        background-color:transparent;
+        color:#faf7ff
+    }
+    .head-cont{
+     
+        height: 130px;
+        margin-bottom: 10px;
+        border-radius: 3px;
+    }
 
-        .form-group {
-            margin-bottom: 20px;
-            text-align: left;
-        }
+    .add-post-header {
+        font-size: clamp(24px,2vw,30px);
+        margin-bottom: 20px;
+        color: #ED4024;
+    }
 
-        label {
-            font-weight: 900;
-        }
-        input[type="text"],
-        textarea {
-            width: 96%;
-            margin-top: 5px;
-            padding: 9px;
-            border: 2px solid black;
-            border-radius: 5px;
-            font-weight: 600;
-            font-size: clamp(16px,1vw,18px);
-            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-            line-height: 1.1;
-            letter-spacing: 1px;
-        }
-        .contact-image img{
-            border-radius: 6rem;
-            width: 4rem;
-            margin-top: -3%;
-            transform: rotate(29deg);
-        }
+    .form-group {
+        margin-bottom: 20px;
+        text-align: left;
+    }
 
-        .add-post-button {
-            background:linear-gradient(120deg,rgb(0, 0, 0) 40%,rgb(144, 32, 32));
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
-            font-size: 16px;
-            font-weight: 600;
-            font-family:  Tahoma, sans-serif;
-            cursor: pointer;
-        }
+    label {
+        font-weight: 900;
+        color:#8685ef
+    }
+    input[type="text"],
+    textarea {
+        width: 96%;
+        margin-top: 5px;
+        padding: 9px;
+        border: 2px solid black;
+        border-radius: 5px;
+        font-weight: 600;
+        font-size: clamp(16px,1vw,18px);
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        line-height: 1.1;
+        letter-spacing: 1px;
+        background-color: #faf7ff;
+    }
+    .contact-image i{
+        border-radius: 6rem;
+        width: 4rem;
+        margin-top: -3%;
+        transform: rotate(29deg);
+        color:#d3fbde;
+    }
 
-        .add-post-button:hover {
-            background:linear-gradient(120deg,rgb(0, 0, 0),rgb(144, 32, 32));
-        }
-       /*media*/
+    .add-post-button {
+        background:linear-gradient(120deg,rgb(0, 0, 0) 40%,rgb(144, 32, 32));
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        padding: 10px 20px;
+        font-size: 16px;
+        font-weight: 600;
+        font-family:  Tahoma, sans-serif;
+        cursor: pointer;
+    }
+
+    .add-post-button:hover {
+        background:linear-gradient(120deg,rgb(0, 0, 0),rgb(144, 32, 32));
+    }
+   /*media*/
 
 @media (min-width:876px){
 .add-post-container{
-  zoom: 110%;
+zoom: 110%;
 }
 
 }
 @media (min-width:1400px){
 .add-post-container{
-  zoom: 170%;
+zoom: 170%;
 }
 
 }
 @media (max-width:500px){
 .heading{
-    font-size: 18px;
+font-size: 18px;
+}
+.add-post-container{
+width: 100%;
+height: 100%;
 }
 }
-        
+    
 </style>
 </head>
 <body>
