--- a/static/css/for_account.css
+++ b/static/css/for_account.css
@@ -1,9 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Kenia&display=swap');
-
 header.masthead {
   background: no-repeat center center;
   background-color: #e0e6ea;
-  height: 30rem;
+  height: clamp(20rem, 30vw, 30rem);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,7 +20,7 @@ header.masthead {
 }
 
 .description {
-  font-size: clamp(14px, 3vw, 36px);
+  font-size: clamp(12px, 2vw, 30px);
   font-weight: 600;
   padding-top: 10px;
   padding-left: 15px;
@@ -30,28 +28,31 @@ header.masthead {
   padding-bottom: 8px;
   line-height: 1.1;
   height: min-content;
+  font-family: system-ui, -apple-system;
   min-height: 100px;
-  border: 2px solid #1c1b1b;
+  border: 2px solid #8685ef;
   border-radius: 8px;
   background-color: rgb(255, 249, 249);
 }
 
 #descrip {
   background: rgb(255, 249, 249);
-  font-size: clamp(18px, 3vw, 36px);
-  border: 2px solid black;
+  font-size: clamp(12px, 2vw, 30px);
+  border: 2px solid #8685ef;
+  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #uid {
   font-size: clamp(20px, 4vw, 40px);
   width: 300px;
   float: right;
-  font-family: 'rubik'
+  font-family: 'itim', sans-serif
 }
 
 p {
   font-size: clamp(22px, 5vw, 50px);
-  font-family: 'Rubik';
+  font-family: 'itim', cursive;
   margin-bottom: 20px;
   font-weight: 600;
   color: rgb(0, 0, 0)
@@ -60,8 +61,8 @@ p {
 
 h1 {
   font-size: clamp(32px, 6vw, 65px);
-  font-family: 'Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;';
-  color: rgb(253, 254, 255);
+  font-family: 'Nova Square', sans-serif;
+  color: #8586ef;
   margin-bottom: 20px;
   margin-top: 4%;
 }
@@ -69,14 +70,15 @@ h1 {
 .subheading {
   font-size: clamp(22px, 3vw, 45px);
   color: white;
+  font-family: 'itim', monospace;
 }
 
 h2 {
-  font-size: clamp(32px, 5vw, 65px);
+  font-size: clamp(26px, 5vw, 65px);
 
   margin-bottom: 30px;
   font-weight: 900;
-  color: rgb(23, 150, 223);
+  color: #010028;
   margin-left: 6%;
 }
 
@@ -100,18 +102,17 @@ h3 {
 
 .post-title-1 {
   font-size: clamp(20px, 3vw, 40px);
-  text-decoration: #f2f7fc underline;
+  text-decoration: #faf7ff underline;
   margin-left: 4%;
   margin-bottom: 4px;
   color: #c9374c;
   padding-top: 0;
-  font-family: 'orbitron';
-
+  font-family: 'Nova Square', sans-serif;
 }
 
 .content-1 {
   line-height: 1.1;
-  word-break: break-all;
+  word-break: normal;
   font-size: clamp(15px, 2vw, 26px);
   margin-top: 1%;
   margin-left: 8%;
@@ -119,8 +120,9 @@ h3 {
   margin-bottom: 1%;
   margin-right: 3%;
   color: rgb(0, 0, 0);
-  font-family: 'Rubik';
+  font-family: 'Rubik', sans-serif;
 }
+
 
 .buttons {
   margin-left: 2%;
@@ -132,8 +134,9 @@ h3 {
   font-weight: 800;
   margin-bottom: 8px;
   color: rgb(18, 16, 16);
-  font-family: 'quicksand';
-  border: 3px solid black;
+  font-family: 'itim', cursive;
+  bottom: none;
+  text-decoration: overline 2px #8685ef;
   background: transparent;
 }
 
@@ -145,6 +148,7 @@ h3 {
 #sendMessageButton {
   float: right;
   font-size: clamp(11px, 2vw, 25px);
+  background-color: #8685ef;
   font-weight: 600;
 }
 
