--- a/static/css/for_all_web.css
+++ b/static/css/for_all_web.css
@@ -1,6 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Itim&family=Nova+Square&family=Source+Code+Pro:wght@500&display=swap');
 /* my css  */
 
 * {
@@ -17,12 +15,12 @@ html {
 }
 
 body {
-  background-color: #f2f7fc;
+  background-color: #faf7ff;
   height: 100%;
 }
 
 .wrapper {
-  background: linear-gradient(110.6deg, #054569 10.9%, #133769 91.1%);
+  background: #010028;
   position: fixed;
   width: 100%;
   z-index: 10;
@@ -97,8 +95,9 @@ nav .content .links {
   font-weight: 600;
   padding: 18px 18px;
   border-radius: 5px;
+  letter-spacing: 2%;
   transition: all 0.3s ease;
-  font-family: "Orbitron";
+  font-family: 'itim';
   text-decoration: none;
 }
 
@@ -169,12 +168,12 @@ nav .content .links {
   font-family: 'rubik', sans-serif;
   background: rgb(255, 255, 255);
   padding: 0 100px 0 15px;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 
 .search-box input::placeholder {
   color: rgb(0, 0, 0);
-  font-family: "rubik";
+  font-family: "Nova Space";
   font-size: clamp(17px, 3vw, 30px);
 }
 
@@ -188,7 +187,7 @@ nav .content .links {
   background: transparent;
   border: none;
   outline: none;
-  color: #000000;
+  color: #8685ef;
   font-size: clamp(25px, 4vw, 40px);
   cursor: pointer;
 }
@@ -259,7 +258,7 @@ nav .content .links {
   margin-left: 25%;
   margin-right: 0%;
   align-self: center;
-  font-family: 'rubik';
+  font-family: 'itim';
   color: #141313;
 }
 
@@ -318,8 +317,8 @@ nav .content .links {
   nav .content .links {
     display: block;
     position: fixed;
-    background: linear-gradient(110.6deg, #054569 10.9%, #133769 91.1%);
-    height: 100%;
+    background: #EFEDFF;
+    height: 70%;
     width: clamp(280px, 30vw, 350px);
     top: 50px;
     left: 0px;
@@ -332,7 +331,7 @@ nav .content .links {
   }
 
   .sub-links {
-    padding: 30px 5px 0px 20px;
+    padding: 4px 5px 0px 20px;
     width: auto;
     height: 380px;
   }
@@ -345,17 +344,18 @@ nav .content .links {
   .user-info {
     padding: 15% 2% 2% 3%;
     display: block;
+    border-bottom: #010028;
   }
 
   hr {
-    color: white;
+    color: #010028;
   }
 
   .user {
     font-size: clamp(25px, 2vw, 60px);
     margin-bottom: 4px;
-    color: #c4460c;
-    font-family: 'orbitron';
+    color: #7C87F2;
+    font-family: 'Nova Square', sans-serif;
     font-weight: 700;
     padding-top: 0;
   }
@@ -364,9 +364,10 @@ nav .content .links {
   .email {
     font-size: 17px;
     margin-bottom: 4px;
-    color: #a28089;
+    color: #0a3f34;
     font-weight: 700;
-    font-family: 'quicksand';
+    letter-spacing: -1%;
+    font-family: monospace;
     padding-top: 0;
   }
 
@@ -384,10 +385,11 @@ nav .content .links {
 
   .content .links li a,
   .content .links li label {
-    line-height: 24px;
-    font-size: clamp(22px, 2vw, 30px);
+    line-height: 18px;
+    font-size: 20px;
     display: block;
-    font-family: "Pixelify sans", sans-serif;
+    color: #000;
+    font-family: 'itim';
     padding: 8px 18px;
     cursor: pointer;
   }
@@ -490,6 +492,7 @@ nav .content .links {
   .small-links {
     display: block;
     padding: 0;
+    width: 100%;
   }
 
   /*footer*/
@@ -500,18 +503,20 @@ nav .content .links {
     text-align: center;
     position: absolute;
     bottom: 0;
-    margin-bottom: 18%;
+    background-color: #010028;
+    margin-bottom: 0%;
   }
 
   .copyright-nav {
-    font-size: 20px;
+    font-size: 14px;
     font-weight: 700;
-    color: rgb(212, 212, 212);
-    font-family: Arial, Helvetica, sans-serif;
+    color: #8685ef;
+    font-family: 'Arial Narrow Bold', sans-serif;
+    letter-spacing: 1px;
   }
 
   .copyright-nav a {
-    font-size: 20px;
+    font-size: 15px;
     color: whitesmoke;
     font-weight: 700;
     text-decoration: dotted;
@@ -531,8 +536,9 @@ nav .content .links {
     color: whitesmoke;
     border: 0 !important;
   }
-  #f-links:hover{
-    background-color: none!important;
+
+  #f-links:hover {
+    background-color: none !important;
     color: #070707;
   }
 }
