--- a/static/css/for_home.css
+++ b/static/css/for_home.css
@@ -44,10 +44,12 @@ header.masthead {
 
 h1 {
   font-size: clamp(48px, 6vw, 65px);
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-family: 'Nova Square', sans-serif;
   margin-bottom: 30px;
   margin-top: 40px;
-  color: rgb(255, 255, 255);
+  font-weight: 700;
+  color: #d3fbde;
+  stroke: 2px black;
 }
 
 h2 {
@@ -73,9 +75,10 @@ h2 {
 
 h3 {
   margin-top: clamp(20px, 5vw, 24px);
-  font-size: clamp(30px, 4vw, 65px);
+  font-size: clamp(24px, 4vw, 55px);
   font-weight: 600;
-  font-family: 'orbitron';
+  letter-spacing: -1%;
+  font-family: 'Source Code Pro', monospace;
   margin-left: 3%;
 }
 
@@ -96,9 +99,9 @@ h3 {
 #username-1,
 #username-1 a {
   margin-top: 1%;
-  font-family: 'Pixelify Sans', sans-serif;
+  font-family: 'itim', sans-serif;
   font-weight: 800;
-  font-size: clamp(20px, 3vw, 38px);
+  font-size: clamp(16px, 3vw, 32px);
   margin-bottom: 1px;
   color: rgb(0, 0, 0);
   margin-right: 1%;
@@ -113,18 +116,18 @@ h3 {
 #username-1 {
   font-size: clamp(12px, 2vw, 24px);
   margin-bottom: 0;
-  color: #358ca6;
-  font-family: 'Rubik', sans-serif;
+  color: #008399;
+  font-family: 'itim', sans-serif;
 }
 
 .post-title-1 {
   font-size: clamp(20px, 3vw, 40px);
-  text-decoration: #f2f7fc underline;
+  text-decoration: #faf7ff underline;
   margin-left: 4%;
   margin-bottom: 4px;
   color: #c9374c;
   padding-top: 0;
-  font-family: "orbitron";
+  font-family: 'Nova Square', sans-serif;
 }
 
 .content-1 {
@@ -165,7 +168,7 @@ a #chat {
 
 /* for individual posts*/
 .container-content {
-  margin-left: 0%;
+  margin-left: 1%;
   overflow-wrap: break-word;
   margin-top: 50px;
   margin-bottom: 70px;
@@ -177,30 +180,31 @@ a #chat {
   margin-bottom: 20px;
   margin-left: 15px;
   margin-right: 8px;
-  font-size: clamp(16px, 2vw, 35px);
+  font-size: clamp(12px, 2vw, 35px);
   opacity: 10px;
-  font-family: 'quicksand';
+  font-family: 'Source Code Pro', monospace;
   font-weight: 600;
-  letter-spacing: 1px;
-  word-break: break-all;
+  letter-spacing: 0.6%;
+  word-break: normal;
   line-height: 1.4;
 }
 
 .user-discuss {
   margin-left: 40%;
-  font-size: clamp(10px, 2vw, 25px);
+  font-size: clamp(10px, 2vw, 24px);
   text-align: end;
   font-weight: 800;
+  letter-spacing: 0.6%;
   margin-top: 3%;
   margin-bottom: 10rem;
   color: #000000;
-  font-family: 'rubik';
+  font-family: 'Itim', cursive;
 }
 
 @media (min-width: 876px) {
   #username-1 img {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
   }
 
   h3 {
@@ -215,6 +219,11 @@ a #chat {
   .container-content {
     margin-left: 5%;
     margin-right: 5%;
+
+  }
+
+  .content-1 {
+    font-weight: 500;
   }
 
   .searched {
